--- a/root/v2ray/config.json
+++ b/root/v2ray/config.json
@@ -62,7 +62,7 @@
             "settings": {}
         },
         {
-            "protocol":"blockhole",
+            "protocol":"blackhole",
             "settings":{},
             "tag":"block"
         }
