--- a/root/v2ray/config.json
+++ b/root/v2ray/config.json
@@ -20,7 +20,7 @@
     },
     "inbounds": [
         {
-            "tag": "tcp",
+            "tag": "ws",
             "port": 8081,
             "protocol": "vmess",
             "settings": {
@@ -33,11 +33,15 @@
                     },
                     {
                         "email": "buser",
-                        "id": "b831381d-6324-4d53-ad4f-8cda48b30811",
+                        "id": "2f53345c-8114-43d2-bad7-1e9949e4d4ef",
                         "level": 0,
                         "alterId": 64
                     }
                 ]
+            },
+             "sniffing": {
+                "enabled": true, 
+                "destOverride": ["http", "tls"]
             },
             "streamSettings": {
                 "network":"ws",
@@ -62,6 +66,19 @@
             "settings": {}
         },
         {
+            "protocol": "shadowsocks",
+            "settings": {
+                "servers": [{
+                    "address": "NETFLIX_PROXY",
+                    "method": "chacha20-ietf-poly1305",
+                    "ota": false,
+                    "password": "V2ray2SS",
+                    "port": 10109
+                }]
+            },
+            "tag": "netflix"
+        },
+        {
             "protocol":"blackhole",
             "settings":{},
             "tag":"block"
@@ -78,6 +95,11 @@
                     "type": "field"
                 },
                 {
+                    "type": "field",
+                    "outboundTag": "netflix",
+                    "domain": ["geosite:netflix"]
+                },
+                {
                     "type":"field",
                     "outboundTag":"block",
                     "protocol":[
@@ -88,30 +110,30 @@
                     "type":"field",
                     "outboundTag":"block",
                     "domain":[
-				"domain:epochtimes.com",
-				"domain:epochtimes.com.tw",
-				"domain:epochtimes.fr",
-				"domain:epochtimes.de",
-				"domain:epochtimes.jp",
-				"domain:epochtimes.ru",
-				"domain:epochtimes.co.il",
-				"domain:epochtimes.co.kr",
-				"domain:epochtimes-romania.com",
-				"domain:erabaru.net",
-				"domain:lagranepoca.com",
-				"domain:theepochtimes.com",
-				"domain:ntdtv.com",
-				"domain:ntd.tv",
-				"domain:ntdtv-dc.com",
-				"domain:ntdtv.com.tw",
-				"domain:minghui.org",
-				"domain:renminbao.com",
-				"domain:dafahao.com",
-				"domain:dongtaiwang.com",
-				"domain:falundafa.org",
-				"domain:wujieliulan.com",
-				"domain:ninecommentaries.com",
-				"domain:shenyun.com"
+				        "domain:epochtimes.com",
+				        "domain:epochtimes.com.tw",
+				        "domain:epochtimes.fr",
+				        "domain:epochtimes.de",
+				        "domain:epochtimes.jp",
+				        "domain:epochtimes.ru",
+				        "domain:epochtimes.co.il",
+				        "domain:epochtimes.co.kr",
+				        "domain:epochtimes-romania.com",
+				        "domain:erabaru.net",
+				        "domain:lagranepoca.com",
+				        "domain:theepochtimes.com",
+				        "domain:ntdtv.com",
+				        "domain:ntd.tv",
+				        "domain:ntdtv-dc.com",
+				        "domain:ntdtv.com.tw",
+				        "domain:minghui.org",
+				        "domain:renminbao.com",
+				        "domain:dafahao.com",
+				        "domain:dongtaiwang.com",
+				        "domain:falundafa.org",
+				        "domain:wujieliulan.com",
+				        "domain:ninecommentaries.com",
+				        "domain:shenyun.com"
                     ]
                 }
             ]
